# Malaria_Predict_CapNEt_CNN_Model

./: README.md
model/: Cargo.toml  code .md 
model/src/: main.rs
model/src/model/: builder.rs  capsule.rs  config.rs  core.rs  layers.rs  loss.rs  mod.rs  optimizer.rs  routing.rs
model/src/train_data/: data_loader.rs  mod.rs  training_strategy.rs
