[package]
name = "model"
version = "0.1.0"
edition = "2024"



[dependencies]
# Core ML
ndarray = { version = "0.17.1", features = ["rayon"] }
ndarray-rand = "0.16.0"
rand = "0.9.2"

# Optimisation numérique
blas-src = { version = "0.14.0", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

# Parallélisme
rayon = "1.10"

# Chargement images
image = "0.25"

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Métriques et logging
indicatif = "0.18.3"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
